// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NewChapterArrow should match snapshot for next arrow base props 1`] = `
<DocumentFragment>
  <a
    class="arrow-wrapper next"
    href="/bible/engesv/mat/3?audio_type=audio_drama"
    title=""
  >
    <svg
      class="next-arrow-svg"
    >
      <use
        xlink:href="/svglist.svg#arrow_left"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`NewChapterArrow should match snapshot for next arrow disabled props 1`] = `
<DocumentFragment>
  <div
    class="arrow-wrapper next disabled"
  />
</DocumentFragment>
`;

exports[`NewChapterArrow should match snapshot for previous arrow base props 1`] = `
<DocumentFragment>
  <a
    class="arrow-wrapper prev"
    href="/bible/engesv/mat/1?audio_type=audio_drama"
    title=""
  >
    <svg
      class="prev-arrow-svg"
    >
      <use
        xlink:href="/svglist.svg#arrow_left"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`NewChapterArrow should match snapshot for previous arrow disabled props 1`] = `
<DocumentFragment>
  <div
    class="arrow-wrapper prev disabled"
  />
</DocumentFragment>
`;
